<resources>
    <string name="app_name">ChildrenWatch</string>
    <string name="Children_watch">儿童手表</string>
    <string name="reg_account">&lt;注册账号</string>
    <string name="phone_number">11位手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="account_not_reg">账号未注册</string>
    <string name="account_passwd_error">密码错误</string>
    <string name="forget_password">忘记密码？</string>
    <string name="apple_id">注册账号</string>
    <string name="china_86">中国+86</string>
    <string name="please_enter_your_mobile_number">请输入你的手机号</string>
    <string name="account_tips">
        手机号码用于接收短信验证码，注册成功后，将成为你的登录账号</string>
    <string name="next_step">下一步</string>
    <string name="Recall_the_password">&lt;找回密码</string>
    <string name="carry_out">完成</string>
    <string name="i_have_read_and_agree">我已阅读并同意</string>
    <string name="user_agreement">用户协议</string>
    <string name="user_agreement_2">&lt;用户协议</string>
    <string name="Agreement_range">一、【协议范围】本协议是您与XXX有限公司之间关于你下载、安装、使用、复制本软件，以及使用XXX有限公司相关服务所订立的协议。</string>
    <string name="Fill_in_the_verification_code_and_password">&lt;填写验证码和密码</string>
    <string name="The_verification_code_has_been_sent_to">验证码已发送到:</string>
    <string name="six_SMS_verification_code">6位短信验证码</string>
    <string name="Fill_in_the_password">填写6 - 20位的字符作为密码</string>
    <string name="Create_an_account_and_login">创建账号并登陆</string>
    <string name="Add_a_watch">&lt;添加手表</string>
    <string name="add">只有添加手表后，才能通过APP管理手表及查询手表的实际位置</string>
    <string name="enter_add">输入DID添加</string>
    <string name="Into_the_App">进入APP</string>
    <string name="I_am_baby">&lt;我是宝贝的</string>
    <string name="baby_height_weight">&lt;宝贝身高体重</string>
    <string name="enterDID">输入DID</string>
    <string name="enter">输入15位DID号码</string>
    <string name="determine">确定</string>
    <string name="cancel">取消</string>
    <string name="baby">宝贝</string>
    <string name="father">爸爸</string>
    <string name="mother">妈妈</string>
    <string name="grandfather">爷爷</string>
    <string name="grandmother">奶奶</string>
    <string name="Grandpa">外公</string>
    <string name="Grandmother">外婆</string>
    <string name="brother">哥哥</string>
    <string name="sister">姐姐</string>
    <string name="other">其他</string>
    <string name="Fill_in_the_verification_code">&lt;填写验证码</string>
    <string name="verification">验证</string>
    <string name="four_SMS_verification_code">4位短信验证码</string>"
    <string name="Please_ask_the_administrator_xxxxxxxxxxx_for_the_verification_code">请向管理员(xxxxxxxxxxx)索取验证码：</string>
    <string name="girl">女</string>
    <string name="boy">男</string>
    <string name="Baby_information">&lt;宝贝资料</string>
    <string name="Album">相册</string>
    <string name="Take_a_photo">拍照</string>
    <string name="Avatar">&#x0020;&#x0020;&#x0020;&#x0020;头像</string>
    <string name="nickname">&#x0020;&#x0020;&#x0020;&#x0020;昵称</string>
    <string name="birthday">&#x0020;&#x0020;&#x0020;&#x0020;生日</string>
    <string name="grade">&#x0020;&#x0020;&#x0020;&#x0020;年级</string>
    <string name="Watch_number">&#x0020;&#x0020;&#x0020;&#x0020;手表号码</string>
    <string name="positioning">定位</string>
    <string name="news">消息</string>
    <string name="Set">设置</string>


    <string name="Phone_number_is_11_digit">电话号码为11位数</string>
    <string name="Account_registered">账号已注册</string>
    <string name="network_error">网络错误</string>
    <string name="Requires_15_digit_DID_number">需要15位DID号码</string>
    <string name="Baby_nickname">宝贝昵称</string>
    <string name="please_enter">请输入</string>
    <string name="Verification_code_is_4_digits">验证码为4位数</string>
    <string name="Password_length_must_be_greater_than_six_digits_and_less_than_twenty_digits">密码长度必须大于六位小于二十位</string>
    <string name="Failed_to_get_verification_code">获取验证码失败</string>
    <string name="Unverifiable">不可验证</string>
    <string name="Failed_to_locate">定位失败</string>
    <string name="must_agree_to_all_permissions_to_use_this_program">必须同意所有权限才能使用本程序</string>
    <string name="An_unknown_error_has_occurred">发生未知错误</string>
    <string name="registration_failed">注册失败</string>
    <string name="modifyconfirm">提交修改</string>
    <string name="history">历史</string>
    <string name="pedometer">计步器</string>
    <string name="baby_footprint">宝贝足迹</string>

</resources>
