<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/titleLayout">

    <Button
        android:id="@+id/add_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add_a_watch"
        android:layout_gravity="left"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        android:background="@color/transparent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_below="@+id/titleLayout"
        android:layout_margin="30dp"/>
    
    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_add"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:background="@color/transparent"/>

    <Button
        android:id="@+id/into"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Into_the_App"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:background="@color/transparent"/>

</RelativeLayout>