<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/login_default_avatar"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/babyWch"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/Children_watch"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_home" />

        <EditText
            android:id="@+id/account"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:hint="@string/phone_number"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_home"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/password"
            android:background="@color/white"
            android:inputType="textPassword"/>
    </LinearLayout>
    
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_margin="40dp"
        android:background="@drawable/button"
        android:text="@string/login"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/forget_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/forget_password"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/appleId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/apple_id" />
    </RelativeLayout>

</LinearLayout>