<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:childrenwatch="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.jyz.childrenwatch.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        childrenwatch:backBtnText="@string/Recall_the_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/spacer_medium"
        android:orientation="vertical"
        android:padding="20dp"
        android:showDividers="middle">

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/please_enter_your_mobile_number"
            android:inputType="number" />

        <Button
            android:id="@+id/carry_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carry_out" />

    </LinearLayout>
</LinearLayout>