<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="5dp" >

    <Button
        android:id="@+id/btn_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/Album"
        android:background="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="@color/white"
        android:text="@string/Take_a_photo"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="@color/white"
        android:text="@string/cancel"
        android:textSize="16sp" />

</LinearLayout>