<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:childrenwatch="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.jyz.childrenwatch.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        childrenwatch:backBtnText="@string/Fill_in_the_verification_code" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/spacer_medium"
        android:orientation="vertical"
        android:padding="20dp"
        android:showDividers="middle">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:text="@string/Please_ask_the_administrator_xxxxxxxxxxx_for_the_verification_code"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/spacer_medium"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:hint="@string/four_SMS_verification_code"
                android:inputType="phone"
                android:maxLength="4" />

            <Button
                android:id="@+id/buttontime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </LinearLayout>

        <Button
            android:id="@+id/count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification" />
    </LinearLayout>
</LinearLayout>