<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:childrenwatch="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:orientation="vertical">

    <com.jyz.childrenwatch.activity.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        childrenwatch:backBtnText="@string/I_am_baby" />


    <ImageView
        android:id="@+id/baba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/mapbtn_bg48" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/baba"
        android:layout_alignLeft="@+id/baba"
        android:layout_alignRight="@+id/baba"
        android:layout_alignStart="@+id/baba"
        android:layout_below="@+id/baba"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/father" />

    <ImageView
        android:id="@+id/mama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/baba"
        android:layout_marginRight="50dp"
        android:src="@drawable/mapbtn_bg48" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/mama"
        android:layout_alignLeft="@+id/mama"
        android:layout_alignRight="@+id/mama"
        android:layout_alignStart="@+id/mama"
        android:layout_below="@+id/mama"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/mother" />


    <ImageView
        android:id="@+id/yeye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="30dp"
        android:src="@drawable/mapbtn_bg48" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/yeye"
        android:layout_alignLeft="@+id/yeye"
        android:layout_alignRight="@+id/yeye"
        android:layout_alignStart="@+id/yeye"
        android:layout_below="@+id/yeye"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/grandfather" />

    <ImageView
        android:id="@+id/nainai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignTop="@+id/yeye"
        android:src="@drawable/mapbtn_bg48" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nainai"
        android:layout_alignLeft="@+id/nainai"
        android:layout_alignRight="@+id/nainai"
        android:layout_alignStart="@+id/nainai"
        android:layout_below="@+id/nainai"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/grandmother" />

    <ImageView
        android:id="@+id/waigong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="30dp"
        android:src="@drawable/mapbtn_bg48" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/waigong"
        android:layout_alignLeft="@+id/waigong"
        android:layout_alignRight="@+id/waigong"
        android:layout_alignStart="@+id/waigong"
        android:layout_below="@+id/waigong"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Grandpa" />

    <ImageView
        android:id="@+id/waipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignTop="@+id/waigong"
        android:src="@drawable/mapbtn_bg48" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/waipo"
        android:layout_alignLeft="@+id/waigong"
        android:layout_alignRight="@+id/waipo"
        android:layout_alignStart="@+id/waipo"
        android:layout_below="@+id/waipo"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Grandmother" />

    <ImageView
        android:id="@+id/gege"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="31dp"
        android:src="@drawable/mapbtn_bg48" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/gege"
        android:layout_alignLeft="@+id/gege"
        android:layout_alignRight="@+id/gege"
        android:layout_alignStart="@+id/gege"
        android:layout_below="@+id/gege"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/brother" />

    <ImageView
        android:id="@+id/jiejie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignTop="@+id/gege"
        android:src="@drawable/mapbtn_bg48" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/jiejie"
        android:layout_alignLeft="@+id/jiejie"
        android:layout_alignRight="@+id/jiejie"
        android:layout_alignStart="@+id/jiejie"
        android:layout_below="@+id/jiejie"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/sister" />

    <Button
        android:id="@+id/other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="20dp"
        android:background="@drawable/mapbtn_bg48" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/other"
        android:layout_alignLeft="@+id/other"
        android:layout_alignRight="@+id/other"
        android:layout_alignStart="@+id/other"
        android:layout_below="@+id/other"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/other" />

</RelativeLayout>