<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/fill_In"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fill_in_the_verification_code_and_password"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@color/transparent"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="验证码已发送到："
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/numText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignTop="@+id/text"
        android:layout_toRightOf="@+id/text"
        android:layout_toEndOf="@+id/text" />

    <EditText
        android:id="@+id/smsEdit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/text"
        android:layout_alignLeft="@+id/text"
        android:background="@color/white"
        android:hint="@string/four_SMS_verification_code"/>

    <Button
        android:id="@+id/countdown"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/smsEdit"
        android:layout_alignRight="@+id/create"
        android:layout_alignEnd="@+id/create"
        android:enabled="false"/>

    <EditText
        android:id="@+id/pasEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/smsEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:hint="@string/Fill_in_the_password" />

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="25dp"
        android:textColor="@color/white"
        android:layout_below="@+id/pasEdit"
        android:text="@string/Create_an_account_and_login"
        android:background="@drawable/button" />

</RelativeLayout>